fix(menu): fix z-index position in list

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -3,6 +3,7 @@
   min-width: 25rem;
   padding: 1rem 0;
   background-color: $white;
+  z-index: 2;
 }
 
 .sb-menu-item {
